--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Are you a WEREWOLF?",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine",
+    "watch": "npm-run-all --parallel watch:*",
+    "watch:tsc": "tsc --watch",
+    "watch:test": "watch 'jasmine' dist/ --wait=0.3"
   },
   "keywords": [
     "werewolf"
@@ -13,5 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "extend": "^3.0.0"
+  },
+  "devDependencies": {
+    "jasmine": "^2.4.1",
+    "npm-run-all": "^1.7.0",
+    "watch": "^0.17.1"
   }
 }
