--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jasmine",
     "watch": "npm-run-all --parallel watch:*",
     "watch:tsc": "tsc --watch",
-    "watch:test": "watch 'jasmine' dist/ --wait=0.3"
+    "watch:test": "mkdirp dist && watch 'jasmine' dist/ --wait=0.3"
   },
   "keywords": [
     "werewolf"
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "jasmine": "^2.4.1",
+    "mkdirp": "^0.5.1",
     "npm-run-all": "^1.7.0",
     "watch": "^0.17.1"
   }
