--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Are you a WEREWOLF?",
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf dist",
     "test": "jasmine",
     "watch": "npm-run-all --parallel watch:*",
     "watch:tsc": "tsc --watch",
@@ -21,6 +22,7 @@
     "jasmine": "^2.4.1",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^1.7.0",
+    "rimraf": "^2.5.2",
     "watch": "^0.17.1"
   }
 }
