--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jasmine",
     "watch": "npm-run-all --parallel watch:*",
     "watch:tsc": "tsc --watch",
-    "watch:test": "mkdirp dist && watch 'jasmine' dist/ --wait=0.3"
+    "watch:test": "mkdirp dist && watch 'node spec/support/run-jasmine.js' dist/ --wait=0.3 --verbose"
   },
   "keywords": [
     "werewolf"
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "jasmine": "^2.4.1",
+    "jasmine-spec-reporter": "^2.4.0",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^1.7.0",
     "rimraf": "^2.5.2",
