--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "npm-run-all clean build:tsc lint",
     "build:tsc": "tsc",
     "clean": "rimraf dist",
-    "lint": "tslint lib/**/*.ts spec/**/*.ts",
+    "lint": "tslint lib/**/*.ts spec/**/*.ts core/**/*.ts",
     "test": "jasmine",
     "watch": "npm-run-all --parallel watch:*",
-    "watch:lint": "watch 'tslint lib/**/*.ts spec/**/*.ts' lib/ spec/ --wait=0.3 --verbose",
+    "watch:lint": "watch 'tslint lib/**/*.ts spec/**/*.ts core/**/*.ts' lib/ core/ spec/ --wait=0.3 --verbose",
     "watch:tsc": "tsc --watch",
     "watch:test": "mkdirp dist && watch 'node spec/support/run-jasmine.js' dist/ --wait=0.3 --verbose"
   },
