--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:tsc": "tsc",
     "clean": "rimraf dist",
     "lint": "find lib/ spec/ core/ -name \"*.ts\" | xargs tslint --force",
-    "test": "jasmine",
+    "test": "node spec/support/run-jasmine.js",
     "watch": "npm-run-all --parallel watch:*",
     "watch:lint": "watch 'npm run lint' lib/ core/ spec/ --wait=0.3 --verbose",
     "watch:tsc": "tsc --watch",
@@ -28,8 +28,8 @@
     "mkdirp": "^0.5.1",
     "npm-run-all": "^1.7.0",
     "rimraf": "^2.5.2",
-    "tslint": "^3.10.2",
-    "typescript": "^1.8.10",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.0",
     "watch": "^0.17.1"
   }
 }
