--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
     "compilerOptions":{
+        "noEmitOnError": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUnusedParameters": true,
+        "removeComments": true,
+        "strictNullChecks": true,
         "module":"commonjs",
         "target":"es5",
         "outDir":"dist/"
