--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "npm-run-all clean build:tsc lint",
     "build:tsc": "tsc",
     "clean": "rimraf dist",
-    "lint": "find lib/ spec/ core/ -name \"*.ts\" | xargs tslint --force",
+    "lint": "find lib/ spec/ core/ keeper/ -name \"*.ts\" | xargs tslint --force",
     "test": "node spec/support/run-jasmine.js",
     "watch": "npm-run-all --parallel watch:*",
-    "watch:lint": "watch 'npm run lint' lib/ core/ spec/ --wait=0.3 --verbose",
+    "watch:lint": "watch 'npm run lint' lib/ core/ keeper/ spec/ --wait=0.3 --verbose",
     "watch:tsc": "tsc --watch",
     "watch:test": "mkdirp dist && watch 'node spec/support/run-jasmine.js' dist/ --wait=0.3 --verbose"
   },
