--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions":{
+        "lib": ["dom", "es5", "es2015.core", "es2015.promise"],
+        "declaration": true,
         "noEmitOnError": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
@@ -9,10 +11,15 @@
         "strictNullChecks": true,
         "module":"commonjs",
         "target":"es5",
-        "outDir":"dist/"
+        "outDir":"dist/",
+        "declarationDir":"dist-typings/"
     },
+    "include":[
+        "core/**/*.ts", "lib/**/*.ts", "spec/**/*.ts"
+    ],
     "exclude":[
-        "node_modules"
+        "node_modules/",
+        "dist-typings/"
     ]
 }
 
